fix color contrast
https://coveord.atlassian.net/browse/KIT-3925

--- a/packages/atomic/src/themes/accessible.css
+++ b/packages/atomic/src/themes/accessible.css
@@ -1,4 +1,4 @@
-:root {
+@theme {
   /* Primary colors */
   --atomic-primary: #303f9f;
   --atomic-primary-light: #666ad1;
@@ -8,8 +8,10 @@
 
   /* Neutral colors */
   --atomic-neutral-dark: #424242;
-  --atomic-neutral: #757575;
-  --atomic-neutral-light: #e0e0e0;
+  --atomic-neutral-dim: #bfc4c8;
+  --atomic-neutral: #e5e8e8;
+  --atomic-neutral-light: #f6f7f9;
+  --atomic-neutral-lighter: #f2f2f2;
 
   /* Semantic colors */
   --atomic-background: #ffffff;
@@ -54,7 +56,11 @@
   --atomic-layout-spacing-x: 1.5rem;
   --atomic-layout-spacing-y: 1rem;
 
-  /* Component specific */
-  --atomic-rating-icon-outline: #775d00;
   --tw-border-style: solid;
+
+  --atomic-rating-icon-active-color: #f6ce3c;
+  --atomic-rating-icon-outline: none;
+
+  --animate-slide-down-modal: slideDown 0.5s linear forwards;
+  --animate-scale-up-modal: scaleUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
